--- a/Ausarbeitung/Proseminar.bib
+++ b/Ausarbeitung/Proseminar.bib
@@ -15,6 +15,21 @@
   author       = {Wikipedia},
   title        = {Kirchhoffsche Regeln},
   howpublished = {https://de.wikipedia.org/w/index.php?title=Kirchhoffsche_Regeln&oldid=249322177},
+  note         = {Webseite, zugegriffen am 11.5.2025},
+}
+
+@Misc{LeiterTheorie,
+  author       = {M. Schlup},
+  title        = {Einführung in die Leitungstheorie},
+  howpublished = {https://aurosoft.ch/Elektrotechnik/EL_Leitungstheorie.pdf},
+  note         = {Skript, abgerufen am 12.5.2025},
+}
+
+@Misc{MaxwellGleichungen,
+  author       = {Wikipedia},
+  title        = {Maxwell-Gleichungen},
+  howpublished = {https://de.wikipedia.org/w/index.php?title=Maxwell-Gleichungen&oldid=251440788},
+  note         = {Webseite, zugegriffen am 125.2025},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
