--- a/Ausarbeitung/Proseminar.bib
+++ b/Ausarbeitung/Proseminar.bib
@@ -5,31 +5,31 @@
 }
 
 @Misc{LeitungenUndFilter,
-  author       = {Werner Bächtold},
-  title        = {Leitungen und Filter},
-  howpublished = {Online verfügbar unter \url{https://people.ee.ethz.ch/~martidi/L+F_Skript_10.pdf}},
-  note         = {Skript, abgerufen am 21.4.2025},
+  author = {Werner Bächtold},
+  title  = {Leitungen und Filter},
+  note   = {Skript, abgerufen am 21.4.2025},
+  url    = {Online verfügbar unter \url{https://people.ee.ethz.ch/~martidi/L+F_Skript_10.pdf}},
 }
 
 @Misc{Kirchhoff,
-  author       = {Wikipedia},
-  title        = {Kirchhoffsche Regeln},
-  howpublished = {https://de.wikipedia.org/w/index.php?title=Kirchhoffsche_Regeln&oldid=249322177},
-  note         = {Webseite, zugegriffen am 11.5.2025},
+  author = {Wikipedia},
+  title  = {Kirchhoffsche Regeln},
+  note   = {Webseite, zugegriffen am 11.5.2025},
+  url    = {https://de.wikipedia.org/w/index.php?title=Kirchhoffsche_Regeln&oldid=249322177},
 }
 
 @Misc{LeiterTheorie,
-  author       = {M. Schlup},
-  title        = {Einführung in die Leitungstheorie},
-  howpublished = {https://aurosoft.ch/Elektrotechnik/EL_Leitungstheorie.pdf},
-  note         = {Skript, abgerufen am 12.5.2025},
+  author = {M. Schlup},
+  title  = {Einführung in die Leitungstheorie},
+  note   = {Skript, abgerufen am 12.5.2025},
+  url    = {https://aurosoft.ch/Elektrotechnik/EL_Leitungstheorie.pdf},
 }
 
 @Misc{MaxwellGleichungen,
-  author       = {Wikipedia},
-  title        = {Maxwell-Gleichungen},
-  howpublished = {https://de.wikipedia.org/w/index.php?title=Maxwell-Gleichungen&oldid=251440788},
-  note         = {Webseite, zugegriffen am 125.2025},
+  author = {Wikipedia},
+  title  = {Maxwell-Gleichungen},
+  note   = {Webseite, zugegriffen am 125.2025},
+  url    = {https://de.wikipedia.org/w/index.php?title=Maxwell-Gleichungen&oldid=251440788},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
