--- a/Ausarbeitung/document.tex
+++ b/Ausarbeitung/document.tex
@@ -14,6 +14,7 @@
 \usepackage{amssymb}
 \usepackage{booktabs}
 \usepackage{xcolor}
+\usepackage{hyperref}
 
 \usepackage{standalone}
 
@@ -947,6 +948,6 @@ Hüllkurven sind jeweils durch \[
 \end{figure}
 
 
-%\printbibliography
+\printbibliography
 
 \end{document}
